Add client launcher: build vanilla/Forge/Fabric clients into ZIP